--- a/Assignment1/app/views/about.ejs
+++ b/Assignment1/app/views/about.ejs
@@ -1,12 +1,14 @@
-<!-- about.ejs -->
-<!-- Hoi Ying CHAN 301272441 -->
-<!-- 9 June 2023 -->
+<!-- File Name: about.ejs -->
+<!-- Name: Hoi Ying CHAN -->
+<!-- ID: 301272441 -->
+<!-- Date: 9 June 2023 -->
 
+<!-- partials for top part of the webpage-->
 <%- include('partials/header.ejs') %>
 <%- include('partials/top_nav.ejs') %>
 <%- include('partials/content.ejs') %>
 
-<!-- self introduction -->
+<!-- self introduction table-->
       <table id="aboutme">
         <tr>
           <td><span class="bold">M</span>oving from Hong Kong to Toronto, I hope to bring a diverse international 
@@ -15,12 +17,12 @@
             Technician here at Centennial College would allow me to transition smoothly into the field of technology and finance.</td>
           <td rowspan="2"><img src="/images/personal photo.jpg" width="240px" height="300px"></td>
         </tr>
-
-<!-- resume link -->
         <tr>
           <td><a href="/documents/CV.pdf">Link</a> to my resume.</td>
         </tr>
       </table>
     </main>
+
+<!-- partials for bottom part of the webpage-->
 <%- include('partials/footer.ejs') %>
 <%- include('partials/bottom_nav.ejs') %>
