--- a/Assignment1/app/views/contact.ejs
+++ b/Assignment1/app/views/contact.ejs
@@ -1,7 +1,9 @@
-<!-- contact.ejs -->
-<!-- Hoi Ying CHAN 301272441 -->
-<!-- 9 June 2023 -->
+<!-- File Name: contact.ejs -->
+<!-- Name: Hoi Ying CHAN -->
+<!-- ID: 301272441 -->
+<!-- Date: 9 June 2023 -->
 
+<!-- partials for top part of the webpage-->
 <%- include('partials/header.ejs') %>
 <%- include('partials/top_nav.ejs') %>
 <%- include('partials/content.ejs') %>
@@ -44,6 +46,6 @@
       </table>
       <br><br><br>
 
-
+<!-- partials for bottom part of the webpage-->
 <%- include('partials/footer.ejs') %>
 <%- include('partials/bottom_nav.ejs') %>
