--- a/Assignment1/app/views/partials/bottom_nav.ejs
+++ b/Assignment1/app/views/partials/bottom_nav.ejs
@@ -1,7 +1,9 @@
-<!-- bottom_nav.ejs -->
-<!-- Hoi Ying CHAN 301272441 -->
-<!-- 9 June 2023 -->
+<!-- File Name: bottom_nav.ejs -->
+<!-- Name: Hoi Ying CHAN -->
+<!-- ID: 301272441 -->
+<!-- Date: 9 June 2023 -->
 
+<!-- To activate the script to make bootstrap work -->
 <script src="/jquery/dist/jquery.min.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
