--- a/Assignment1/app/views/partials/content.ejs
+++ b/Assignment1/app/views/partials/content.ejs
@@ -1,7 +1,9 @@
-<!-- content.ejs -->
-<!-- Hoi Ying CHAN 301272441 -->
-<!-- 9 June 2023 -->
+<!-- File Name: content.ejs -->
+<!-- Name: Hoi Ying CHAN -->
+<!-- ID: 301272441 -->
+<!-- Date: 9 June 2023 -->
 
+<!-- To create the title of the page -->
 <main class=”container”>
   <div class=”jumbotron”>
       <h1 class=”display-4”><%= title %></h1>
