--- a/Assignment1/app/views/partials/footer.ejs
+++ b/Assignment1/app/views/partials/footer.ejs
@@ -1,7 +1,9 @@
-<!-- footer.ejs -->
-<!-- Hoi Ying CHAN 301272441 -->
-<!-- 9 June 2023 -->
+<!-- File Name: footer.ejs -->
+<!-- Name: Hoi Ying CHAN -->
+<!-- ID: 301272441 -->
+<!-- Date: 9 June 2023 -->
 
+<!-- To create the footer of the page -->
 <footer>
   <nav class="navbar fixed-bottom navbar-dark bg-dark">
      
