--- a/Assignment1/app/views/partials/header.ejs
+++ b/Assignment1/app/views/partials/header.ejs
@@ -1,7 +1,9 @@
-<!-- header.ejs -->
-<!-- Hoi Ying CHAN 301272441 -->
-<!-- 9 June 2023 -->
+<!-- File Name: header.ejs -->
+<!-- Name: Hoi Ying CHAN -->
+<!-- ID: 301272441 -->
+<!-- Date: 9 June 2023 -->
 
+<!-- To create the head section of the page -->
 <!DOCTYPE html>
 <html>
   <head>
