--- a/Assignment1/app/views/partials/top_nav.ejs
+++ b/Assignment1/app/views/partials/top_nav.ejs
@@ -1,7 +1,9 @@
-<!-- top_nav.ejs -->
-<!-- Hoi Ying CHAN 301272441 -->
-<!-- 9 June 2023 -->
+<!-- File Name: top_nav.ejs -->
+<!-- Name: Hoi Ying CHAN -->
+<!-- ID: 301272441 -->
+<!-- Date: 9 June 2023 -->
 
+<!-- To create the top navigation bar of the page -->
 <nav class="navbar" style="background-color: #3d5be1;">
     <div class="container-fluid">
       <img src="/images/logo.png" alt="logo">
