--- a/Assignment1/app/views/projects.ejs
+++ b/Assignment1/app/views/projects.ejs
@@ -1,7 +1,9 @@
-<!-- projects.ejs -->
-<!-- Hoi Ying CHAN 301272441 -->
-<!-- 9 June 2023 -->
+<!-- File Name: projects.ejs -->
+<!-- Name: Hoi Ying CHAN -->
+<!-- ID: 301272441 -->
+<!-- Date: 9 June 2023 -->
 
+<!-- partials for top part of the webpage-->
 <%- include('partials/header.ejs') %>
 <%- include('partials/top_nav.ejs') %>
 <%- include('partials/content.ejs') %>
@@ -10,6 +12,7 @@
       <p style="text-align: center;font-size: large;">--- Previous Projects For You To Have A Look ---</p>
       <hr style="border-top: 5px solid #3d5be1;">
 
+<!-- table for previous projects introduction-->
       <table id="projects">
         <tr>
           <td class="projectLink" style="width: 50%;text-align: center;"><a href ="http://studentweb.cencol.ca/hchan134/COMP213/HomePage.html"><img src="/images/project1.png" width="250px" height="200px"></a></td>
@@ -53,5 +56,7 @@
       </table>
       <br><br><br>
     </main>
+
+<!-- partials for bottom part of the webpage-->
 <%- include('partials/footer.ejs') %>
 <%- include('partials/bottom_nav.ejs') %>
