--- a/Assignment1/public/stylesheets/style.css
+++ b/Assignment1/public/stylesheets/style.css
@@ -1,7 +1,25 @@
-/* style.css
-   Hoi Ying CHAN 301272441
-   9 June 2023 */
+/* File Name: style.css
+   Name: Hoi Ying CHAN
+   ID: 301272441
+   Date: 9 June 2023 */
 
+/*General layout*/
+html,body {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+  
+body {
+  display: flex;
+  flex-direction: column;
+}
+  
+main {
+  flex: 1;
+}
+
+/*Navigation bar*/
 ul.navbar-nav {
   list-style: none; 
   display: inline;
@@ -39,21 +57,7 @@ text-decoration: none;
   color: white;
 }
 
-html,body {
-height: 100%;
-margin: 0;
-font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
-display: flex;
-flex-direction: column;
-}
-
-main {
-flex: 1;
-}
-
+/*footer*/
 footer {
 background-color: #343a40;
 color: #ffffff;
@@ -64,11 +68,42 @@ margin-bottom: 0;
 font-size: small;
 }
 
+/*typography styles*/
 h1.”display-4”{
   padding: 1%;
   color: rgb(38, 45, 144);
 }
 
+.bold{
+  font-size: 40px;
+  font-weight: bold;
+}
+
+/*buttons in index.ejs linking to other pages*/
+.indexButton{
+  border:2px solid #3d5be1;
+  border-radius: 10%;
+  border-collapse: separate;
+  background-color: rgb(232, 232, 232);
+}
+
+.bottomTable{
+  background-color: rgb(218, 226, 246);
+}
+
+/*zoomin and hyperlinks in projects.ejs*/
+.projectLink{
+  overflow: hidden;
+  cursor: pointer;
+}
+.projectLink img{
+  transition: transform .5s ease;
+}
+.projectLink:hover img {
+  transform: scale(1.5);
+}
+
+/*tables*/
 #aboutme, #contact, #services, #projects, #home {
   width: 80%;
   margin-left: auto;
@@ -85,17 +120,13 @@ h1.”display-4”{
   padding:10px;
 }
 
-.bold{
-  font-size: 40px;
-  font-weight: bold;
-}
-
 .grid-container {
   display: grid;
   grid-template-columns: 50% 50%;
   padding: 10px;
 }
 
+/*form*/
 label {
   display: block;
   float: left;
@@ -123,10 +154,12 @@ input, textarea {
   cursor: pointer;
 }
 
+/*panel*/
 .panel{
   padding-right: 10%;
 }
 
+/*grid container in services page*/
 .servicegrid-container{
   display: grid;
   grid-template-columns: auto auto auto auto;
@@ -139,34 +172,15 @@ input, textarea {
   text-align: center;
 }
 
-.row1{
+.servicesRow1{
   width: 60px;
 }
 
-
-.row3 p{
+.servicesRow3 p{
   padding: 20px;
   text-align: left;
   height: 300px;
 }
-.projectLink{
-  overflow: hidden;
-  cursor: pointer;
-}
-.projectLink img{
-  transition: transform .5s ease;
-}
-.projectLink:hover img {
-  transform: scale(1.5);
-}
 
-.button{
-  border:2px solid #3d5be1;
-  border-radius: 10%;
-  border-collapse: separate;
-  background-color: rgb(232, 232, 232);
-}
 
-.bottomTable{
-  background-color: rgb(218, 226, 246);
-}
+
